--- a/doc/agile/sprint_backlog_88.org
+++ b/doc/agile/sprint_backlog_88.org
@@ -13,39 +13,40 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2016-09-21 Wed 09:44]
+#+CAPTION: Clock summary at [2016-09-21 Wed 11:03]
 | <75>                                                                        |         |       |       |       |
 | Headline                                                                    | Time    |       |       |     % |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| *Total time*                                                                | *54:15* |       |       | 100.0 |
+| *Total time*                                                                | *54:59* |       |       | 100.0 |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| Stories                                                                     | 54:15   |       |       | 100.0 |
-| Active                                                                      |         | 54:15 |       | 100.0 |
+| Stories                                                                     | 54:59   |       |       | 100.0 |
+| Active                                                                      |         | 54:59 |       | 100.0 |
 | STARTED Sprint and product backlog grooming                                 |         |       |  3:33 |   6.5 |
 | COMPLETED Fix chocolatey warning                                            |         |       |  0:08 |   0.2 |
 | COMPLETED Edit release notes for previous sprint                            |         |       |  0:27 |   0.8 |
-| COMPLETED Analysis on current state of file path generation                 |         |       |  0:57 |   1.8 |
+| COMPLETED Analysis on current state of file path generation                 |         |       |  0:57 |   1.7 |
 | CANCELLED Remove inclusion dependencies builder factory                     |         |       |  0:14 |   0.4 |
 | COMPLETED Analysis on formatters, elements and extensibility                |         |       |  1:18 |   2.4 |
 | COMPLETED Refactor =inclusion_dependencies_provider_interface=              |         |       |  1:12 |   2.2 |
 | COMPLETED Investigate broken windows builds                                 |         |       |  0:32 |   1.0 |
-| COMPLETED Refactor path derivatives factory for usage in formatters         |         |       |  5:14 |   9.6 |
+| COMPLETED Refactor path derivatives factory for usage in formatters         |         |       |  5:14 |   9.5 |
 | COMPLETED Move file path generation to formatters                           |         |       |  1:58 |   3.6 |
 | CANCELLED Path derivatives factory generates all possible includes          |         |       |  3:07 |   5.7 |
-| COMPLETED Analysis on inclusion derivatives and path derivatives            |         |       |  1:04 |   2.0 |
-| COMPLETED Split path factory from provider factory                          |         |       |  2:32 |   4.7 |
-| COMPLETED Use providers when building inclusion directives                  |         |       | 12:01 |  22.2 |
+| COMPLETED Analysis on inclusion derivatives and path derivatives            |         |       |  1:04 |   1.9 |
+| COMPLETED Split path factory from provider factory                          |         |       |  2:32 |   4.6 |
+| COMPLETED Use providers when building inclusion directives                  |         |       | 12:01 |  21.9 |
 | COMPLETED Fix AppVeyor notifications                                        |         |       |  0:22 |   0.7 |
 | COMPLETED Static use of element types does more harm than good              |         |       |  0:32 |   1.0 |
-| COMPLETED Analysis: major rethink of the implementation of quilt            |         |       |  1:30 |   2.8 |
+| COMPLETED Analysis: major rethink of the implementation of quilt            |         |       |  1:30 |   2.7 |
 | CANCELLED Create a simple Emacs mode for stitch                             |         |       |  1:12 |   2.2 |
-| COMPLETED Add facet folder and formatter enablement to formatter properties |         |       |  2:52 |   5.3 |
-| COMPLETED Move =cmakelists_info= to fabric                                  |         |       |  6:34 |  12.1 |
+| COMPLETED Add facet folder and formatter enablement to formatter properties |         |       |  2:52 |   5.2 |
+| COMPLETED Move =cmakelists_info= to fabric                                  |         |       |  6:34 |  11.9 |
 | COMPLETED Move =odb_options_info= to fabric                                 |         |       |  1:29 |   2.7 |
 | COMPLETED Remove =formattable_origin_type=                                  |         |       |  0:17 |   0.5 |
-| COMPLETED Remove formattable origin type                                    |         |       |  2:25 |   4.5 |
-| COMPLETED Rename config model to options                                    |         |       |  1:07 |   2.1 |
+| COMPLETED Remove formattable origin type                                    |         |       |  2:25 |   4.4 |
+| COMPLETED Rename config model to options                                    |         |       |  1:07 |   2.0 |
 | COMPLETED Rename annotation to decoration in formatters model               |         |       |  0:30 |   0.9 |
+| COMPLETED Fix appveyor Visual Studio build                                  |         |       |  0:44 |   1.3 |
 | STARTED Big rename for "final" terminology clean up                         |         |       |  0:15 |   0.5 |
 | STARTED Add type index to name and to formatter interface                   |         |       |  0:53 |   1.6 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
@@ -895,6 +896,14 @@ for CMake files.
 We need to free up annotations for the meta-data. Rename them to
 decorations. A decoration is defined to be the parts of the file which
 are not functionally dependent on the modeling element.
+
+*** COMPLETED Fix appveyor Visual Studio build                        :story:
+    CLOSED: [2016-09-21 Wed 10:59]
+    CLOCK: [2016-09-21 Wed 10:15]--[2016-09-21 Wed 10:59] =>  0:44
+
+For some reason our VS build started failing. First it could not find
+the CMake package so we upgraded it to latest. Then the package
+installed but it could not find the binary.
 
 *** STARTED Big rename for "final" terminology clean up               :story:
     CLOCK: [2016-09-21 Wed 09:31]--[2016-09-21 Wed 09:44] =>  0:13
