--- a/doc/agile/sprint_backlog_88.org
+++ b/doc/agile/sprint_backlog_88.org
@@ -13,15 +13,15 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2016-09-21 Wed 11:03]
+#+CAPTION: Clock summary at [2016-09-21 Wed 11:20]
 | <75>                                                                        |         |       |       |       |
 | Headline                                                                    | Time    |       |       |     % |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| *Total time*                                                                | *54:59* |       |       | 100.0 |
+| *Total time*                                                                | *55:19* |       |       | 100.0 |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| Stories                                                                     | 54:59   |       |       | 100.0 |
-| Active                                                                      |         | 54:59 |       | 100.0 |
-| STARTED Sprint and product backlog grooming                                 |         |       |  3:33 |   6.5 |
+| Stories                                                                     | 55:19   |       |       | 100.0 |
+| Active                                                                      |         | 55:19 |       | 100.0 |
+| STARTED Sprint and product backlog grooming                                 |         |       |  3:33 |   6.4 |
 | COMPLETED Fix chocolatey warning                                            |         |       |  0:08 |   0.2 |
 | COMPLETED Edit release notes for previous sprint                            |         |       |  0:27 |   0.8 |
 | COMPLETED Analysis on current state of file path generation                 |         |       |  0:57 |   1.7 |
@@ -31,10 +31,10 @@
 | COMPLETED Investigate broken windows builds                                 |         |       |  0:32 |   1.0 |
 | COMPLETED Refactor path derivatives factory for usage in formatters         |         |       |  5:14 |   9.5 |
 | COMPLETED Move file path generation to formatters                           |         |       |  1:58 |   3.6 |
-| CANCELLED Path derivatives factory generates all possible includes          |         |       |  3:07 |   5.7 |
+| CANCELLED Path derivatives factory generates all possible includes          |         |       |  3:07 |   5.6 |
 | COMPLETED Analysis on inclusion derivatives and path derivatives            |         |       |  1:04 |   1.9 |
 | COMPLETED Split path factory from provider factory                          |         |       |  2:32 |   4.6 |
-| COMPLETED Use providers when building inclusion directives                  |         |       | 12:01 |  21.9 |
+| COMPLETED Use providers when building inclusion directives                  |         |       | 12:01 |  21.7 |
 | COMPLETED Fix AppVeyor notifications                                        |         |       |  0:22 |   0.7 |
 | COMPLETED Static use of element types does more harm than good              |         |       |  0:32 |   1.0 |
 | COMPLETED Analysis: major rethink of the implementation of quilt            |         |       |  1:30 |   2.7 |
@@ -46,7 +46,7 @@
 | COMPLETED Remove formattable origin type                                    |         |       |  2:25 |   4.4 |
 | COMPLETED Rename config model to options                                    |         |       |  1:07 |   2.0 |
 | COMPLETED Rename annotation to decoration in formatters model               |         |       |  0:30 |   0.9 |
-| COMPLETED Fix appveyor Visual Studio build                                  |         |       |  0:44 |   1.3 |
+| COMPLETED Fix appveyor Visual Studio build                                  |         |       |  1:04 |   1.9 |
 | STARTED Big rename for "final" terminology clean up                         |         |       |  0:15 |   0.5 |
 | STARTED Add type index to name and to formatter interface                   |         |       |  0:53 |   1.6 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
@@ -899,6 +899,7 @@ are not functionally dependent on the modeling element.
 
 *** COMPLETED Fix appveyor Visual Studio build                        :story:
     CLOSED: [2016-09-21 Wed 10:59]
+    CLOCK: [2016-09-21 Wed 11:00]--[2016-09-21 Wed 11:20] =>  0:20
     CLOCK: [2016-09-21 Wed 10:15]--[2016-09-21 Wed 10:59] =>  0:44
 
 For some reason our VS build started failing. First it could not find
