--- a/doc/agile/sprint_backlog_88.org
+++ b/doc/agile/sprint_backlog_88.org
@@ -13,14 +13,14 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2016-09-21 Wed 14:24]
+#+CAPTION: Clock summary at [2016-09-21 Wed 14:44]
 | <75>                                                                        |         |       |       |       |
 | Headline                                                                    | Time    |       |       |     % |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| *Total time*                                                                | *57:04* |       |       | 100.0 |
+| *Total time*                                                                | *57:23* |       |       | 100.0 |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| Stories                                                                     | 57:04   |       |       | 100.0 |
-| Active                                                                      |         | 57:04 |       | 100.0 |
+| Stories                                                                     | 57:23   |       |       | 100.0 |
+| Active                                                                      |         | 57:23 |       | 100.0 |
 | STARTED Sprint and product backlog grooming                                 |         |       |  3:33 |   6.2 |
 | COMPLETED Fix chocolatey warning                                            |         |       |  0:08 |   0.2 |
 | COMPLETED Edit release notes for previous sprint                            |         |       |  0:27 |   0.8 |
@@ -29,25 +29,25 @@
 | COMPLETED Analysis on formatters, elements and extensibility                |         |       |  1:18 |   2.3 |
 | COMPLETED Refactor =inclusion_dependencies_provider_interface=              |         |       |  1:12 |   2.1 |
 | COMPLETED Investigate broken windows builds                                 |         |       |  0:32 |   0.9 |
-| COMPLETED Refactor path derivatives factory for usage in formatters         |         |       |  5:14 |   9.2 |
+| COMPLETED Refactor path derivatives factory for usage in formatters         |         |       |  5:14 |   9.1 |
 | COMPLETED Move file path generation to formatters                           |         |       |  1:58 |   3.4 |
-| CANCELLED Path derivatives factory generates all possible includes          |         |       |  3:07 |   5.5 |
+| CANCELLED Path derivatives factory generates all possible includes          |         |       |  3:07 |   5.4 |
 | COMPLETED Analysis on inclusion derivatives and path derivatives            |         |       |  1:04 |   1.9 |
 | COMPLETED Split path factory from provider factory                          |         |       |  2:32 |   4.4 |
-| COMPLETED Use providers when building inclusion directives                  |         |       | 12:01 |  21.1 |
+| COMPLETED Use providers when building inclusion directives                  |         |       | 12:01 |  20.9 |
 | COMPLETED Fix AppVeyor notifications                                        |         |       |  0:22 |   0.6 |
 | COMPLETED Static use of element types does more harm than good              |         |       |  0:32 |   0.9 |
 | COMPLETED Analysis: major rethink of the implementation of quilt            |         |       |  1:30 |   2.6 |
 | CANCELLED Create a simple Emacs mode for stitch                             |         |       |  1:12 |   2.1 |
 | COMPLETED Add facet folder and formatter enablement to formatter properties |         |       |  2:52 |   5.0 |
-| COMPLETED Move =cmakelists_info= to fabric                                  |         |       |  6:34 |  11.5 |
+| COMPLETED Move =cmakelists_info= to fabric                                  |         |       |  6:34 |  11.4 |
 | COMPLETED Move =odb_options_info= to fabric                                 |         |       |  1:29 |   2.6 |
 | COMPLETED Remove =formattable_origin_type=                                  |         |       |  0:17 |   0.5 |
 | COMPLETED Remove formattable origin type                                    |         |       |  2:25 |   4.2 |
-| COMPLETED Rename config model to options                                    |         |       |  1:07 |   2.0 |
+| COMPLETED Rename config model to options                                    |         |       |  1:07 |   1.9 |
 | COMPLETED Rename annotation to decoration in formatters model               |         |       |  0:30 |   0.9 |
 | COMPLETED Fix appveyor Visual Studio build                                  |         |       |  1:04 |   1.9 |
-| STARTED Big rename for "final" terminology clean up                         |         |       |  2:00 |   3.5 |
+| STARTED Big rename for "final" terminology clean up                         |         |       |  2:19 |   4.0 |
 | STARTED Add type index to name and to formatter interface                   |         |       |  0:53 |   1.5 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
@@ -906,7 +906,9 @@ For some reason our VS build started failing. First it could not find
 the CMake package so we upgraded it to latest. Then the package
 installed but it could not find the binary.
 
-*** STARTED Big rename for "final" terminology clean up               :story:
+*** COMPLETED Big rename for "final" terminology clean up             :story:
+    CLOSED: [2016-09-21 Wed 15:42]
+    CLOCK: [2016-09-21 Wed 14:25]--[2016-09-21 Wed 14:44] =>  0:19
     CLOCK: [2016-09-21 Wed 13:30]--[2016-09-21 Wed 14:24] =>  0:54
     CLOCK: [2016-09-21 Wed 11:42]--[2016-09-21 Wed 12:13] =>  0:31
     CLOCK: [2016-09-21 Wed 11:21]--[2016-09-21 Wed 11:41] =>  0:20
