--- a/doc/agile/sprint_backlog_88.org
+++ b/doc/agile/sprint_backlog_88.org
@@ -13,42 +13,42 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2016-09-21 Wed 16:31]
+#+CAPTION: Clock summary at [2016-09-21 Wed 17:42]
 | <75>                                                                        |         |       |       |       |
 | Headline                                                                    | Time    |       |       |     % |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| *Total time*                                                                | *58:19* |       |       | 100.0 |
+| *Total time*                                                                | *59:29* |       |       | 100.0 |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| Stories                                                                     | 58:19   |       |       | 100.0 |
-| Active                                                                      |         | 58:19 |       | 100.0 |
-| STARTED Sprint and product backlog grooming                                 |         |       |  3:33 |   6.1 |
+| Stories                                                                     | 59:29   |       |       | 100.0 |
+| Active                                                                      |         | 59:29 |       | 100.0 |
+| STARTED Sprint and product backlog grooming                                 |         |       |  3:33 |   6.0 |
 | COMPLETED Fix chocolatey warning                                            |         |       |  0:08 |   0.2 |
 | COMPLETED Edit release notes for previous sprint                            |         |       |  0:27 |   0.8 |
 | COMPLETED Analysis on current state of file path generation                 |         |       |  0:57 |   1.6 |
 | CANCELLED Remove inclusion dependencies builder factory                     |         |       |  0:14 |   0.4 |
 | COMPLETED Analysis on formatters, elements and extensibility                |         |       |  1:18 |   2.2 |
-| COMPLETED Refactor =inclusion_dependencies_provider_interface=              |         |       |  1:12 |   2.1 |
+| COMPLETED Refactor =inclusion_dependencies_provider_interface=              |         |       |  1:12 |   2.0 |
 | COMPLETED Investigate broken windows builds                                 |         |       |  0:32 |   0.9 |
-| COMPLETED Refactor path derivatives factory for usage in formatters         |         |       |  5:14 |   9.0 |
-| COMPLETED Move file path generation to formatters                           |         |       |  1:58 |   3.4 |
-| CANCELLED Path derivatives factory generates all possible includes          |         |       |  3:07 |   5.3 |
+| COMPLETED Refactor path derivatives factory for usage in formatters         |         |       |  5:14 |   8.8 |
+| COMPLETED Move file path generation to formatters                           |         |       |  1:58 |   3.3 |
+| CANCELLED Path derivatives factory generates all possible includes          |         |       |  3:07 |   5.2 |
 | COMPLETED Analysis on inclusion derivatives and path derivatives            |         |       |  1:04 |   1.8 |
 | COMPLETED Split path factory from provider factory                          |         |       |  2:32 |   4.3 |
-| COMPLETED Use providers when building inclusion directives                  |         |       | 12:01 |  20.6 |
+| COMPLETED Use providers when building inclusion directives                  |         |       | 12:01 |  20.2 |
 | COMPLETED Fix AppVeyor notifications                                        |         |       |  0:22 |   0.6 |
 | COMPLETED Static use of element types does more harm than good              |         |       |  0:32 |   0.9 |
-| COMPLETED Analysis: major rethink of the implementation of quilt            |         |       |  1:30 |   2.6 |
-| CANCELLED Create a simple Emacs mode for stitch                             |         |       |  1:12 |   2.1 |
-| COMPLETED Add facet folder and formatter enablement to formatter properties |         |       |  2:52 |   4.9 |
-| COMPLETED Move =cmakelists_info= to fabric                                  |         |       |  6:34 |  11.3 |
+| COMPLETED Analysis: major rethink of the implementation of quilt            |         |       |  1:30 |   2.5 |
+| CANCELLED Create a simple Emacs mode for stitch                             |         |       |  1:12 |   2.0 |
+| COMPLETED Add facet folder and formatter enablement to formatter properties |         |       |  2:52 |   4.8 |
+| COMPLETED Move =cmakelists_info= to fabric                                  |         |       |  6:34 |  11.0 |
 | COMPLETED Move =odb_options_info= to fabric                                 |         |       |  1:29 |   2.5 |
 | COMPLETED Remove =formattable_origin_type=                                  |         |       |  0:17 |   0.5 |
 | COMPLETED Remove formattable origin type                                    |         |       |  2:25 |   4.1 |
 | COMPLETED Rename config model to options                                    |         |       |  1:07 |   1.9 |
-| COMPLETED Rename annotation to decoration in formatters model               |         |       |  0:30 |   0.9 |
+| COMPLETED Rename annotation to decoration in formatters model               |         |       |  0:30 |   0.8 |
 | COMPLETED Fix appveyor Visual Studio build                                  |         |       |  1:04 |   1.8 |
-| COMPLETED Big rename for "final" terminology clean up                       |         |       |  2:19 |   4.0 |
-| STARTED Tidy-up file configuration in formatters                            |         |       |  0:56 |   1.6 |
+| COMPLETED Big rename for "final" terminology clean up                       |         |       |  2:19 |   3.9 |
+| STARTED Tidy-up file configuration in formatters                            |         |       |  2:06 |   3.5 |
 | STARTED Add type index to name and to formatter interface                   |         |       |  0:53 |   1.5 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
@@ -941,6 +941,7 @@ it already in the formatters model. Perhaps that could be renamed to
 something else, freeing up the name?
 
 *** STARTED Tidy-up file configuration in formatters                  :story:
+    CLOCK: [2016-09-21 Wed 16:32]--[2016-09-21 Wed 17:42] =>  1:10
     CLOCK: [2016-09-21 Wed 15:35]--[2016-09-21 Wed 16:31] =>  0:56
 
 We never did like the "file" prefix, since many things can be
