--- a/doc/agile/sprint_backlog_88.org
+++ b/doc/agile/sprint_backlog_88.org
@@ -13,14 +13,14 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2016-09-21 Wed 21:20]
+#+CAPTION: Clock summary at [2016-09-21 Wed 21:25]
 | <75>                                                                        |         |       |       |       |
 | Headline                                                                    | Time    |       |       |     % |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| *Total time*                                                                | *60:53* |       |       | 100.0 |
+| *Total time*                                                                | *60:56* |       |       | 100.0 |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| Stories                                                                     | 60:53   |       |       | 100.0 |
-| Active                                                                      |         | 60:53 |       | 100.0 |
+| Stories                                                                     | 60:56   |       |       | 100.0 |
+| Active                                                                      |         | 60:56 |       | 100.0 |
 | STARTED Sprint and product backlog grooming                                 |         |       |  3:33 |   5.8 |
 | COMPLETED Fix chocolatey warning                                            |         |       |  0:08 |   0.2 |
 | COMPLETED Edit release notes for previous sprint                            |         |       |  0:27 |   0.7 |
@@ -49,8 +49,9 @@
 | COMPLETED Fix appveyor Visual Studio build                                  |         |       |  1:04 |   1.8 |
 | COMPLETED Big rename for "final" terminology clean up                       |         |       |  2:19 |   3.8 |
 | COMPLETED Tidy-up file configuration in formatters                          |         |       |  3:03 |   5.0 |
-| STARTED Stitch still uses "properties"                                      |         |       |  0:27 |   0.7 |
-| STARTED Add type index to name and to formatter interface                   |         |       |  0:53 |   1.5 |
+| COMPLETED Stitch still uses "properties"                                    |         |       |  0:27 |   0.7 |
+| CANCELLED Add a stitch prefix to stitch fields                              |         |       |  0:03 |   0.1 |
+| STARTED Add type index to name and to formatter interface                   |         |       |  0:53 |   1.4 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
 
@@ -964,23 +965,31 @@ Tasks:
   and workflow.
 - rename file annotation etc to decoration annotation.
 
-*** STARTED Stitch still uses "properties"                            :story:
+*** COMPLETED Stitch still uses "properties"                          :story:
+    CLOSED: [2016-09-21 Wed 21:25]
     CLOCK: [2016-09-21 Wed 20:53]--[2016-09-21 Wed 21:20] =>  0:27
 
 We didn't rename properties to configuration in stitch. Check
 annotations while we're there.
+
+*** CANCELLED Add a stitch prefix to stitch fields                    :story:
+    CLOSED: [2016-09-21 Wed 21:24]
+    CLOCK: [2016-09-21 Wed 21:21]--[2016-09-21 Wed 21:24] =>  0:03
+
+Now that decoration is used as a prefix for the top-level fields, it
+seems only right to have a prefix for the stitch fields as well. If
+nothing else, for symmetry purposes.
+
+Actually this just looks ugly because the model name is also
+stitch. This is a good idea, but we need to find a good name for the
+field group rather than just stitch. For now might as well leave it as
+is.
 
 *** Formatter properties are not optional in assistant                :story:
 
 After the formattables refactor, the formatter properties are now
 mandatory for all elements. We should not allow them to be optional in
 assistant.
-
-*** Add a stitch prefix to stitch fields                              :story:
-
-Now that decoration is used as a prefix for the top-level fields, it
-seems only right to have a prefix for the stitch fields as well. If
-nothing else, for symmetry purposes.
 
 *** STARTED Add type index to name and to formatter interface         :story:
     CLOCK: [2016-09-21 Wed 09:16]--[2016-09-21 Wed 09:31] =>  0:15
