--- a/doc/agile/sprint_backlog_88.org
+++ b/doc/agile/sprint_backlog_88.org
@@ -13,37 +13,37 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2016-09-21 Wed 21:35]
+#+CAPTION: Clock summary at [2016-09-21 Wed 22:00]
 | <75>                                                                        |         |       |       |       |
 | Headline                                                                    | Time    |       |       |     % |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| *Total time*                                                                | *61:06* |       |       | 100.0 |
+| *Total time*                                                                | *61:28* |       |       | 100.0 |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| Stories                                                                     | 61:06   |       |       | 100.0 |
-| Active                                                                      |         | 61:06 |       | 100.0 |
+| Stories                                                                     | 61:28   |       |       | 100.0 |
+| Active                                                                      |         | 61:28 |       | 100.0 |
 | STARTED Sprint and product backlog grooming                                 |         |       |  3:33 |   5.8 |
 | COMPLETED Fix chocolatey warning                                            |         |       |  0:08 |   0.2 |
 | COMPLETED Edit release notes for previous sprint                            |         |       |  0:27 |   0.7 |
-| COMPLETED Analysis on current state of file path generation                 |         |       |  0:57 |   1.6 |
+| COMPLETED Analysis on current state of file path generation                 |         |       |  0:57 |   1.5 |
 | CANCELLED Remove inclusion dependencies builder factory                     |         |       |  0:14 |   0.4 |
 | COMPLETED Analysis on formatters, elements and extensibility                |         |       |  1:18 |   2.1 |
 | COMPLETED Refactor =inclusion_dependencies_provider_interface=              |         |       |  1:12 |   2.0 |
 | COMPLETED Investigate broken windows builds                                 |         |       |  0:32 |   0.9 |
-| COMPLETED Refactor path derivatives factory for usage in formatters         |         |       |  5:14 |   8.6 |
+| COMPLETED Refactor path derivatives factory for usage in formatters         |         |       |  5:14 |   8.5 |
 | COMPLETED Move file path generation to formatters                           |         |       |  1:58 |   3.2 |
 | CANCELLED Path derivatives factory generates all possible includes          |         |       |  3:07 |   5.1 |
 | COMPLETED Analysis on inclusion derivatives and path derivatives            |         |       |  1:04 |   1.7 |
 | COMPLETED Split path factory from provider factory                          |         |       |  2:32 |   4.1 |
-| COMPLETED Use providers when building inclusion directives                  |         |       | 12:01 |  19.7 |
+| COMPLETED Use providers when building inclusion directives                  |         |       | 12:01 |  19.5 |
 | COMPLETED Fix AppVeyor notifications                                        |         |       |  0:22 |   0.6 |
 | COMPLETED Static use of element types does more harm than good              |         |       |  0:32 |   0.9 |
-| COMPLETED Analysis: major rethink of the implementation of quilt            |         |       |  1:30 |   2.5 |
+| COMPLETED Analysis: major rethink of the implementation of quilt            |         |       |  1:30 |   2.4 |
 | CANCELLED Create a simple Emacs mode for stitch                             |         |       |  1:12 |   2.0 |
 | COMPLETED Add facet folder and formatter enablement to formatter properties |         |       |  2:52 |   4.7 |
 | COMPLETED Move =cmakelists_info= to fabric                                  |         |       |  6:34 |  10.7 |
 | COMPLETED Move =odb_options_info= to fabric                                 |         |       |  1:29 |   2.4 |
 | COMPLETED Remove =formattable_origin_type=                                  |         |       |  0:17 |   0.5 |
-| COMPLETED Remove formattable origin type                                    |         |       |  2:25 |   4.0 |
+| COMPLETED Remove formattable origin type                                    |         |       |  2:25 |   3.9 |
 | COMPLETED Rename config model to options                                    |         |       |  1:07 |   1.8 |
 | COMPLETED Rename annotation to decoration in formatters model               |         |       |  0:30 |   0.8 |
 | COMPLETED Fix appveyor Visual Studio build                                  |         |       |  1:04 |   1.7 |
@@ -52,6 +52,7 @@
 | COMPLETED Stitch still uses "properties"                                    |         |       |  0:27 |   0.7 |
 | CANCELLED Add a stitch prefix to stitch fields                              |         |       |  0:03 |   0.1 |
 | COMPLETED Formatter properties are not optional in assistant                |         |       |  0:10 |   0.3 |
+| COMPLETED Consider removing the overwrite flag in =formatters::file=        |         |       |  0:22 |   0.6 |
 | STARTED Add type index to name and to formatter interface                   |         |       |  0:53 |   1.4 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
@@ -994,6 +995,27 @@ After the formattables refactor, the formatter properties are now
 mandatory for all elements. We should not allow them to be optional in
 assistant.
 
+*** COMPLETED Consider removing the overwrite flag in =formatters::file= :story:
+    CLOSED: [2016-09-21 Wed 21:57]
+    CLOCK: [2016-09-21 Wed 21:58]--[2016-09-21 Wed 21:59] =>  0:01
+    CLOCK: [2016-09-21 Wed 21:36]--[2016-09-21 Wed 21:57] =>  0:21
+
+Investigate if the overwrite flag makes sense in file; it seems we
+only use it in two scenarios: force overwrite requested by user or
+file contents have changed, both of which can be done in the
+file_writer.
+
+Actually this flag is needed. It is required to handle the case where
+we do not code-generate files, unless they do not exist. For example,
+for service headers and implementation we should create the files, but
+then subsequently not touch them. The overwrite flag should be set to
+false. We need to figure out how to implement this and remove the
+hacks around file writing.
+
+For now we have abused this flag to allow legacy files overrides of
+the new world formatters. This is just until we move totally to new
+world though.
+
 *** STARTED Add type index to name and to formatter interface         :story:
     CLOCK: [2016-09-21 Wed 09:16]--[2016-09-21 Wed 09:31] =>  0:15
     CLOCK: [2016-09-21 Wed 09:01]--[2016-09-21 Wed 09:15] =>  0:14
@@ -1035,10 +1057,14 @@ Tasks:
 - update registrar to register using type index.
 - update all uses of formatter container.
 
-*** Move odb options file into odb folder                             :story:
+*** Remove =optional<list>=                                           :story:
 
-There is not particularly good reason for this file to exist at the
-src level.
+We should not really be using optional<list>. The empty list is
+sufficient for this.
+
+Uses:
+
+- include provider. Fixed with other story.
 
 *** Remove static formatter containers                                :story:
 
@@ -1199,6 +1225,14 @@ initialisers. However, it makes more sense to initialise them on the
 translation unit for each formatter. This will also make life easier
 when we move to a mustache world where there may not be a formatter
 header file at all.
+
+*** Move odb options file into odb folder                             :story:
+
+There is not particularly good reason for this file to exist at the
+src level.
+
+In order to implement this story we need to have a working odb setup
+to test it and ensure we didn't break anything.
 
 ** Deprecated
 *** CANCELLED Consider renaming formatters                            :story:
